# Remitwise-Contracts

./: .gitignore  ABSOLUTE_FINAL_VERIFY.txt  ACCESS_CONTROL_MATRIX.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_CONTRACTS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  EVENTS.md  FAMILY_WALLET_FINAL_VERIFY.txt  FAMILY_WALLET_VERIFY.txt  FEATURE_FLAGS.md  FEATURE_FLAGS_BUILD_STATUS.md  FEATURE_FLAGS_COMPLETE.md  FEATURE_FLAGS_IMPLEMENTATION.md  FINAL_FINAL_VERIFY.txt  FINAL_VERIFY.txt  FINAL_WORKSPACE_VERIFY.txt  IMPLEMENTATION_GUIDE_TAG_VALIDATION.md  INDEXER_FEATURE.md  MEMBER_CLEANUP_IMPLEMENTATION.md  NEW_CONTRACT_GUIDE.md  PR_BODY.md  PR_DESCRIPTION.md  PR_MESSAGE.md  PR_REENTRANCY_CLAIM_REWARDS.md  PR_STORAGE_KEY_SNAPSHOT.md  PR_VIEW_FUNCTIONS_READONLY.md  README.md  RESULT.txt  SECURITY_REVIEW_SUMMARY.md  STRESS_TESTS_STATUS.md  TAGGING_FEATURE.md  THE_DEFINITIVE_FINAL_ATTEMPT.txt  THE_FINAL_ATTEMPT.txt  THE_FINAL_DEFINITIVE_WALKTHROUGH_ATTEMPT.txt  THE_FINAL_FINAL_ATTEMPT.txt  THE_REAL_FINAL_ATTEMPT.txt  (+180 more)
bill_payments/: Cargo.toml  README.md
bill_payments/proptest-regressions/: lib.txt
bill_payments/src/: events.rs  events_schema_test.rs  lib.rs  test.rs  tests_bill_schedule_exec.rs
bill_payments/test_snapshots/: test_archive_large_amount_bill.1.json  test_batch_pay_large_bills.1.json  test_create_bill_near_max_i128.1.json  test_edge_case_i128_max_minus_one.1.json  test_get_total_unpaid_overflow_panics.1.json  test_get_total_unpaid_saturates_on_overflow.1.json  test_get_total_unpaid_with_two_large_bills.1.json  test_multiple_large_bills_different_owners.1.json  test_notification_flow.1.json  test_overdue_bills_with_large_amounts.1.json  test_pagination_with_large_amounts.1.json  test_pay_bill_with_large_amount.1.json  test_recurring_bill_with_large_amount.1.json
bill_payments/test_snapshots/test/: test_gas_optimization.1.json  test_get_all_bills_for_owner_includes_paid.1.json  test_get_archived_bills_pagination.1.json  test_get_overdue_bills_not_overdue.1.json  test_get_overdue_bills_pagination.1.json  test_get_unpaid_bills_excludes_other_owner.1.json  test_get_unpaid_bills_excludes_paid.1.json  test_get_unpaid_bills_multiple_pages.1.json  test_get_unpaid_bills_owner_isolation_after_one_pays.1.json  test_get_unpaid_bills_owner_isolation_all_paid_other_owner_unpaid.1.json  test_get_unpaid_bills_owner_isolation_bidirectional.1.json  test_get_unpaid_bills_owner_isolation_one_owner_no_bills.1.json  test_get_unpaid_bills_owner_isolation_pagination_does_not_leak.1.json  test_get_unpaid_bills_single_page.1.json  test_limit_clamped_to_max.1.json  (+16 more)
bill_payments/tests/: archived_pagination_tests.rs  bulk_cleanup_invariants.rs  config_integration_tests.rs  gas_bench.rs  pagination_gaps.rs  stress_test_large_amounts.rs  stress_tests.rs  test_emergency_pause.rs  test_notifications.rs  test_recurring_lifecycle.rs  tests_overdue.rs  tests_recurring.rs  unpaid_by_currency_pagination.rs
insurance/: Cargo.toml  README.md  test_output.txt  test_output_utf8.txt
insurance/src/: events_schema_test.rs  lib.rs  next_payment_scheduling_tests.rs  test.rs
insurance/tests/: gas_bench.rs  stress_tests.rs
integration_tests/: Cargo.toml  INTEGRATION_TESTING.md  README.md
integration_tests/test_snapshots/: test_multi_contract_user_flow.1.json  test_multiple_entities_creation.1.json  test_split_with_rounding.1.json
integration_tests/tests/: multi_contract_integration.rs  orchestrated_multisig_flow.rs  regression_tests.rs  safe_math_cross_contract.rs
orchestrator/: Cargo.toml  README.md
orchestrator/src/: events_schema_test.rs  lib.rs  test.rs
orchestrator/tests/: gas_bench.rs
reporting/: Cargo.toml  README.md  test_output.txt
reporting/docs/: REPORTING_MODEL.md
reporting/src/: lib.rs  tests.rs  tests_archived_pagination_bound.rs  tests_auth_acl.rs  tests_data_availability.rs  tests_safe_math.rs  utils.rs
reporting/tests/: gas_bench.rs
scenarios/: Cargo.toml
scenarios/src/: lib.rs
scenarios/test_snapshots/: test_end_to_end_flow.1.json
scenarios/tests/: flow.rs
(+500 files in other folders)
