[package]
name = "insurance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
remitwise-common = { path = "../remitwise-common" }

[dev-dependencies]
proptest = "1.10.0"
soroban-sdk = { workspace = true, features = ["testutils"] }
testutils = { path = "../testutils" }


