[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"
ed25519-dalek = { version = "=2.1.1", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

testutils = { path = "../testutils" }
